--- a/WebContent/welcome.html
+++ b/WebContent/welcome.html
@@ -1,6 +1,6 @@
-<div id="welcomeDiv">
-    <img id="logo" src="img/ClueLessLogo.png" width="600" height="500">
-    <ul id="menu">
+<div id="welcomeDiv" class="centeredDiv">
+    <img id="logo" src="img/ClueLessLogo.png" width="600" height="500" style="float:right">
+    <ul class="buttonsMenu">
 		<li>
 			<a href="#" id="playBtn">Play!</a>
 		</li>
@@ -8,4 +8,5 @@
 			<a href="#" id="helpBtn">How To Play</a>
 		</li>
 	</ul>
+	<div id='playerInputDiv'>Player Name: <input id="playerInput" type="text" value="jason"><br></div>
 </div>
